Tune up gulpfile for watch partials and reload

--- a/partial/_header.html
+++ b/partial/_header.html
@@ -24,42 +24,11 @@
                     <li>
                         <a href="about.html">About</a>
                     </li>
-                    <li class="current">
+                    <li>
                         <a href="services.html">Service</a>
-                        <ul class="sub-menu ">
-                            <li><a href="private.html">Private Security</a></li>
-                            <li><a href="transport.html">Transport Security</a></li>
-                            <li><a href="home.html">Home Security</a></li>
-                            <li><a href="busniess.html">Business Security</a></li>
-                            <li><a href="protocol.html">Protocol Duties</a></li>
-                            <li><a href="armed.html">Armed Security</a></li>
-                        </ul><!-- /.sub-menu -->
                     </li>
                     <li>
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu ">
-                            <li><a href="team.html">Team</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="testimonials.html">Testimonials</a></li>
-                        </ul><!-- /.sub-menu -->
-                    </li>
-                    <li>
-                        <a href="blog.html">Blog</a>
-                        <ul class="sub-menu ">
-                            <li><a href="blog.html">Blog Grid</a></li>
-                            <li><a href="blog-left.html">Blog Left</a></li>
-                            <li><a href="blog-right.html">Blog Right</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul><!-- /.sub-menu -->
-                    </li>
-                    <li>
-                        <a href="shop.html">Shop</a>
-                        <ul class="sub-menu ">
-                            <li><a href="shop.html">Shop Page</a></li>
-                            <li><a href="single-shop.html">Product Page</a></li>
-                            <li><a href="cart.html">Cart Page</a></li>
-                            <li><a href="checkout.html">Checkout Page</a></li>
-                        </ul><!-- /.sub-menu -->
+                        <a href="testimonials.html">Testimonials</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -68,7 +37,7 @@
             </div><!-- /.navbar-collapse -->
 
             <div class="right-button-box">
-                <a href="cart.html" class="cart-btn"><i class="icon icon-ShoppingCart"></i></a><!--
+               <!--
 	        	--><span class="sep"></span><!--
 	        	--><a href="#" class="thm-btn">Appointment</a>
             </div><!-- /.right-button-box -->
