--- a/partial/_header.html
+++ b/partial/_header.html
@@ -11,7 +11,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/logo.png" alt="Awesome Image"/>
+                    <img src="img/logo-header.jpg" alt="Awesome Image"/>
+                    Sparta 3.8 Protection
                 </a>
             </div>
 
