--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,8 @@ a:active {
   border-radius: 0;
 }
 
+
+
 .header .header-navigation.navbar > .container .navbar-brand,
 .header .header-navigation.navbar > .container-fluid .navbar-brand {
   margin: 0;
@@ -223,6 +225,19 @@ a:active {
   padding: 0;
   font-size: 18px;
   line-height: 47px;
+}
+
+.header .header-navigation.navbar > .container .navbar-brand img,
+.header .header-navigation.navbar > .container-fluid .navbar-brand img{
+  max-height: 65px;
+}
+
+.header .header-navigation.navbar > .container .navbar-brand,
+.header .header-navigation.navbar > .container-fluid .navbar-brand {
+  font-size: 22px;
+  color: #182345;
+  font-family: "Titillium Web";
+  font-weight: 600;
 }
 
 .header .header-navigation.navbar > .container-fluid {
@@ -1519,7 +1534,7 @@ a:active {
 ***************************/
 .inner-banner {
   position: relative;
-  background: #171b27 url(../img/inner-banner.jpg) center center no-repeat;
+  background: #171b27 url(../img/inner-banner2.jpg) center center no-repeat;
   background-size: cover;
   padding-top: 100px;
   padding-bottom: 100px;
