--- a/partial/_footer.html
+++ b/partial/_footer.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="footer-widget about-widget">
-                    <a href="#" class="footer-logo"><img src="img/logo-footer.png" alt="Awesome Image"/></a>
+                    <a href="#" class="footer-logo"><img src="img/logo-footer.jpg" alt="Awesome Image"/></a>
                     <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. </p>
