Removing map and topbar address , change services names and styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -710,6 +710,7 @@ a:active {
   font-weight: 500;
   font-size: 20px;
   margin-top: 25px;
+  line-height: 2.4rem;
 }
 
 @media (min-width: 1200px) {
