--- a/partial/_topbar.html
+++ b/partial/_topbar.html
@@ -1,8 +1,8 @@
 <section class="top-bar">
     <div class="container-fluid">
         <div class="contact-info pull-left">
-            <a href="#"><i class="fa fa-envelope"></i> Support@example.com</a><!--
-			--><a href="#"><i class="fa fa-globe"></i> leine Pierboulevard 8-6 2249 KV Vries</a>
+            <a href="#"><i class="fa fa-envelope"></i> Edrickspartaproinc@gmail.com</a><!--
+			--><!-- <a href="#"><i class="fa fa-globe"></i> leine Pierboulevard 8-6 2249 KV Vries</a> -->
         </div><!-- /.contact-info pull-left -->
         <div class="social pull-right">
             <a href="#" class="fa fa-facebook"></a><!--
