Feature services edited

--- a/partial/_topbar.html
+++ b/partial/_topbar.html
@@ -1,7 +1,7 @@
 <section class="top-bar">
     <div class="container-fluid">
         <div class="contact-info pull-left">
-            <a href="#"><i class="fa fa-envelope"></i> Edrickspartaproinc@gmail.com</a><!--
+            <a href="mailto:sparta38protectioninc@gmail.com"><i class="fa fa-envelope"></i> Contact Us</a><!--
 			--><!-- <a href="#"><i class="fa fa-globe"></i> leine Pierboulevard 8-6 2249 KV Vries</a> -->
         </div><!-- /.contact-info pull-left -->
         <div class="social pull-right">
