--- a/partial/_footer.html
+++ b/partial/_footer.html
@@ -4,9 +4,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="footer-widget about-widget">
                     <a href="#" class="footer-logo"><img src="img/logo-footer.jpg" alt="Awesome Image"/></a>
-                    <p>Lorem ipsum dolor sit amet, consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <p>Sparta 3.8 Protection, Inc. is a Certified Service-Disabled Veteran-Owned Small Business. Owned and operated by a 15-year special operations combat veteran with a vast knowledge of security, ranging from executive protection, diplomatic security, and surveillance to firearms training, advanced medical training, and close-quarters combat. </p>
                 </div><!-- /.footer-widget -->
             </div><!-- /.col-md-3 -->
             <div class="col-md-2 col-sm-6 col-xs-12">
