--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -656,6 +656,12 @@ a:active {
   -webkit-animation-delay: 1s;
   animation-delay: 1s;
 }
+@media (max-width: 768px) {
+  .slider-home-one .content h3 {
+    font-size: 32px;
+    line-height: 1.5;
+  }
+}
 .slider-home-one .content h3 span.font-bold {
   font-weight: 700 !important;
 }
@@ -816,6 +822,7 @@ a:active {
   position: relative;
   cursor: pointer;
   overflow: hidden;
+  height: 192px;
 }
 .single-service .img-box:before {
   content: "";
@@ -837,6 +844,9 @@ a:active {
   border-top-right-radius: 10px;
   transition: all 0.4s ease;
   transform: scale(1);
+  height: 100%;
+  width: auto;
+  min-width: 100%;
 }
 .single-service .text-box {
   background: #fff;
