--- a/partial/_header.html
+++ b/partial/_header.html
@@ -40,7 +40,7 @@
             <div class="right-button-box">
                <!--
 	        	--><span class="sep"></span><!--
-	        	--><a href="#" class="thm-btn">Appointment</a>
+	        	--><a href="contact.html" class="thm-btn">Free Consultation</a>
             </div><!-- /.right-button-box -->
         </div><!-- /.container-fluid -->
     </nav>
