--- a/partial/_services.html
+++ b/partial/_services.html
@@ -4,7 +4,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/armed-unarmed-security-2.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/armed-unarmed-security-2.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>ARMED/UNARMED SECURITY</h3></a>
@@ -16,7 +16,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/active-shooter.png" alt="Awesome Image"/>
+                        <img src="img/services/active-shooter.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>ACTIVE SHOOTER TRAINING</h3></a>
@@ -28,7 +28,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/surveillance.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/surveillance.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>SURVEILLANCE</h3></a>
@@ -42,7 +42,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/school-campus-security-2.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/school-campus-security-2.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>SCHOOL/CAMPUS SECURITY</h3></a>
@@ -54,7 +54,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/construction-site.png" alt="Awesome Image"/>
+                        <img src="img/services/construction-site.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>CONSTRUCTION SITE SECURITY</h3></a>
@@ -66,7 +66,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/disaster-relief.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/disaster-relief.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>DISASTER RELIEF SECURITY</h3></a>
@@ -80,7 +80,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/executive-protection.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/executive-protection.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>EXECUTIVE PROTECTION / BODYGUARD</h3></a>
@@ -92,7 +92,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/event-security.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/event-security.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>EVENT SECURITY</h3></a>
@@ -104,7 +104,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/cargo-escort.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/cargo-escort.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>CARGO ESCORT SECURITY</h3></a>
@@ -118,7 +118,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/retail-commercial.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/retail-commercial.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>RETAIL/COMMERCIAL SECURITY</h3></a>
@@ -130,7 +130,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/hotel-security.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/hotel-security.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>HOTEL SECURITY</h3></a>
@@ -142,7 +142,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/residential-security-2.png" alt="Awesome Image"/>
+                        <img src="img/services/residential-security-2.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>RESIDENTIAL SECURITY</h3></a>
@@ -156,7 +156,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/parking-enforcement.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/parking-enforcement.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>PARKING ENFORCEMENT</h3></a>
@@ -168,7 +168,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/roving-patrol-2.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/roving-patrol-2.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>ROVING/MOBILE PATROL</h3></a>
@@ -182,7 +182,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-service">
                     <div class="img-box">
-                        <img src="img/services/roving-patrol-2.jpeg" alt="Awesome Image"/>
+                        <img src="img/services/k9.jpg" alt="Awesome Image"/>
                     </div><!-- /.img-box -->
                     <div class="text-box">
                         <a href="#"><h3>K9 Security</h3></a>
