--- a/partial/_footer.html
+++ b/partial/_footer.html
@@ -58,9 +58,10 @@
     <div class="footer-bottom">
         <div class="container">
             <div class="copy-text pull-left">Sparta 3.8 Protection &copy; 2021
-                All Right Reserved</div><!-- /.copy-text -->
+                All Right Reserved.</div><!-- /.copy-text -->
             <div class="footer-menu pull-right">
                 <ul class="list-inline">
+                    <li><a href="#">LIC: B3000022 </a></li>
                     <li><a href="#">Terms of Service</a></li>
                     <li><a href="#">Privacy Policy</a></li>
                 </ul><!-- /.list-inline -->
