--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -853,12 +853,11 @@ a:active {
   transition: all 0.4s ease;
 }
 .single-service .img-box img {
-  width: 100%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   transition: all 0.4s ease;
   transform: scale(1);
-  height: 100%;
+  min-height: 100%;
   width: auto;
   min-width: 100%;
 }
